--- a/CQRS_Service.Infrastructure/CQRS_Service.Infrastructure.csproj
+++ b/CQRS_Service.Infrastructure/CQRS_Service.Infrastructure.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CQRS_Service.Application\CQRS_Service.Application.csproj" />
+  </ItemGroup>
+
 </Project>
